fix flex wrap on coord view

--- a/styles/sass/_coords.scss
+++ b/styles/sass/_coords.scss
@@ -38,6 +38,7 @@
     .coords-list {
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
 
         li {
             border-bottom: none;
